fix wrap in layout

--- a/src/styl/co-styles.styl
+++ b/src/styl/co-styles.styl
@@ -50,7 +50,7 @@ $fontload-js ?= false
             code
                 display block
                 padding 1em
-                white-space nowrap
+                white-space pre
                 overflow-x auto
 
     .wrapper
